dirty fix for mobile nav scrolling on iOS

--- a/src/styles/_navbar.scss
+++ b/src/styles/_navbar.scss
@@ -172,7 +172,7 @@
 
 // Mobile properties
 
-.mobile-navbar {
+#mobile-navbar {
   display: block;
   @include media-breakpoint-up(lg) {
     display: none;
@@ -184,6 +184,10 @@
   background: rgba(255, 255, 255, 0.95);
   z-index: $zindex-popup;
   overflow: auto;
+}
+
+.mobile-inner {
+  min-height: 850px;
 }
 
 .mobile-navbar-transition-enter {
